src/test/resources/syntactic/error/TC_ERROR_STRUCT_2.ru
/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 5 | COLUMNA 5 | SE ESPERABA: } Y SE ENCONTRO: literal Int |
struct A:B{
    1
}